# fastapi_book

./: pyproject.toml
app/: .env.example  alembic.ini  main.py
app/api/: __init__.py  authors.py  books.py  genres.py
app/core/: __init__.py  config.py  database.py
app/dependencies/: __init__.py  pagination.py  repositories.py
app/migration/: env.py
app/migration/versions/: 2026_06_08_1657-cc6f16ebb96a_init_revision.py  2026_06_10_1709-03be4d7cebc1_remove_tables_genres_and_book_genres.py  2026_07_17_1226-88f9e156a0de_create_genre_table.py
app/models/: __init__.py  associations.py  author.py  base.py  book.py  genre.py
app/repositories/: __init__.py  author_repository.py  base.py  book_repository.py  genre_repository.py
app/schemas/: __init__.py  author.py  book.py  common.py  genre.py  pagination.py
