[tool.poetry]
package-mode = false

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
exclude = ["tests/", "migration/"]

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.136.3"
uvicorn = "^0.49.0"
pydantic = "^2.13.4"
pydantic-settings = "^2.14.1"
sqlalchemy = "^2.0.50"
asyncpg = "^0.31.0"
alembic = "^1.18.4"

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "mypy (>=2.3.0,<3.0.0)"
]
